fix: align header

--- a/main.css
+++ b/main.css
@@ -7,20 +7,42 @@
     height: 1200px;
     margin: auto;
     background-color: blanchedalmond;
-    position: relative;
+   
 }
 
 
 .first {
-    display: inline-block;
-    width: 100%;
+    /*display: inline-block;*/
+    width: 800px;
+    height: 35px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;  
-    border: 1px solid orange;
-    background: #fff5d7;
+    /*border: 1px solid orange;*/
+    border-bottom: 2px solid #000;
+    background: blanchedalmond;
+    margin: auto;
    
   
 
 }
+
+.who {
+    width:30%;
+    /*border: 1px solid blue;*/
+    position:absolute;
+   
+    top:10px
+}
+
+
+.position {
+    float:right;
+    text-align: right;
+    width:40%;
+    /*border: 1px solid rgb(1, 1, 3);*/
+    padding-top: 0px;
+}
+
 
 .second {
     width: 80%;
@@ -36,7 +58,7 @@
     float: left;
     width: 300px;
     
-    position: absolute;
+    /* position: absolute;*/
     border: 1px solid orange;
 
 }
